cp project/force-app/main/default/objects/Round_Robin_State__c/Round_Robin_State__c.object-meta.xml
<CustomObject>
    <description>Stores runtime persistent state for Round Robin Lead assignments per team.</description>
    <label>Round Robin State</label>
    <nameField>
        <displayFormat>RRS-{0000}</displayFormat>
        <label>State Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robin States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>