cp project/force-app/main/default/objects/Round_Robin_State__c/fields/Last_Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who was last assigned a Lead for this team</description>
    <label>Last Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Round_Robin_States</relationshipName>
    <type>Lookup</type>
</CustomField>