cp project/force-app/main/default/objects/Round_Robin_State__c/fields/Last_Assigned_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned_User_Id__c</fullName>
    <description>18-character Salesforce User Id snapshot of the last assigned user</description>
    <label>Last Assigned User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>