cp project/force-app/main/default/objects/Round_Robin_State__c/fields/Last_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment_Date__c</fullName>
    <description>Timestamp of the most recent assignment for this team</description>
    <label>Last Assignment Date</label>
    <type>DateTime</type>
</CustomField>