cp project/force-app/main/default/objects/Round_Robin_State__c/fields/Next_Sequence__c.field-meta.xml
<CustomField><fullName>Next_Sequence__c</fullName><label>Next Sequence</label><precision>6</precision><scale>0</scale><type>Number</type><defaultValue>1</defaultValue></CustomField>