cp project/force-app/main/default/objects/Round_Robin_State__c/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <description>Unique team identifier matching the Round Robin Config Team Name</description>
    <externalId>true</externalId>
    <label>Team Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>