cp project/force-app/main/default/objects/Round_Robin_State__c/fields/Total_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Total_Assignments__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cumulative number of Lead assignments made for this team</description>
    <label>Total Assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>